# gotify-desktop

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cross.toml  README.md  build.rs  gotify-desktop.service  release  update-version
.github/workflows/: ci.yml
desktop/: gotify-desktop.desktop
scripts/: install-macos.sh
src/: config.rs  gotify.rs  main.rs  notif.rs
