[package]
name = "gotify-desktop"
version = "1.3.2"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
backoff = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
mio = { version = "0.8.9", default-features = false, features = ["os-ext"] }
native-tls = { version = "0.2.11", default-features = false }
notify-rust = { version = "4.9.0", default-features = false, features = ["serde", "zbus"] }
reqwest = { version = "0.11.22", default-features = false, features = ["native-tls", "blocking", "gzip"] }
serde = { version = "1.0.190", default-features = false, features = ["std"] }
serde_json = { version = "1.0.107", default-features = false, features = ["std"] }
shlex = { version = "1.2.0", default-features = false, features = ["std"] }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "timestamps", "stderr"] }
thiserror = { version = "1.0.50", default-features = false }
toml = { version = "0.8.6", default-features = false, features = ["parse"] }
tungstenite = { version = "0.20.1", default-features = false, features = ["native-tls", "handshake"] }
url = { version = "2.4.1", default-features = false, features = ["serde"] }
xdg = { version = "2.5.2", default-features = false }
