[package]
name = "gotify-desktop"
version = "1.3.7"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
backoff = { version = "0.4.0", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
mio = { version = "0.8.11", default-features = false, features = ["os-ext"] }
notify-rust = { version = "4.9.0", default-features = false, features = ["serde", "zbus"] }
reqwest = { version = "0.12.5", default-features = false, features = ["native-tls", "blocking", "gzip"] }
serde = { version = "1.0.190", default-features = false, features = ["std"] }
serde_json = { version = "1.0.107", default-features = false, features = ["std"] }
shlex = { version = "1.2.0", default-features = false, features = ["std"] }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "timestamps", "stderr"] }
thiserror = { version = "1.0.50", default-features = false }
toml = { version = "0.8.6", default-features = false, features = ["parse"] }
tungstenite = { version = "0.23.0", default-features = false, features = ["native-tls", "handshake", "url"] }
url = { version = "2.4.1", default-features = false, features = ["serde"] }
xdg = { version = "2.5.2", default-features = false }

[lints.rust]
missing_docs = "warn"
# unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# from clippy::restrictions
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
expect_used = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
redundant_type_annotations = "warn"
# ref_patterns = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_to_string = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
