[package]
name = "gotify-desktop"
version = "1.3.7"
authors = ["desbma <desbma@users.noreply.github.com>"]
rust-version = "1.81"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
backoff = { version = "0.4.0", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
mio = { version = "0.8.11", default-features = false, features = ["os-ext"] }
notify-rust = { version = "4.9.0", default-features = false, features = ["serde", "zbus"] }
reqwest = { version = "0.12.5", default-features = false, features = ["native-tls", "blocking", "gzip"] }
serde = { version = "1.0.190", default-features = false, features = ["std"] }
serde_json = { version = "1.0.107", default-features = false, features = ["std"] }
shlex = { version = "1.2.0", default-features = false, features = ["std"] }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "timestamps", "stderr"] }
thiserror = { version = "1.0.50", default-features = false }
toml = { version = "0.8.6", default-features = false, features = ["parse"] }
tungstenite = { version = "0.23.0", default-features = false, features = ["native-tls", "handshake", "url"] }
url = { version = "2.4.1", default-features = false, features = ["serde"] }
xdg = { version = "2.5.2", default-features = false }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# below lints are from clippy::restriction, and assume clippy >= 1.83
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
